implement forgot password

--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fd8201"
-    tools:context=".LoginAcitivty">
+    tools:context=".PasswordActivity">
 
 
     <ImageView
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:shadowColor="#FFFFFF"
-        android:text="SIGN IN HERE"
+        android:text="RESET PASSWORD"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/user"
+        android:id="@+id/user_email"
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="296dp"
@@ -58,59 +58,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/pass"
-        android:layout_width="330dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="368dp"
-        android:background="@drawable/input_edit"
-        android:ems="10"
-        android:hint="Enter Password"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_reset"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="444dp"
-        android:text="SIGN IN"
-        android:onClick="login"
+        android:layout_marginTop="384dp"
         android:background="@drawable/rounded_border"
+        android:onClick="login"
+        android:text="RESET"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fpasssword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="520dp"
-        android:text="Forgot Password?"
-        android:onClick="resetPassword"
-        android:textColor="#fff"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="520dp"
-        android:text=" New Here?"
-        android:onClick="Registration"
-        android:textColor="#fff"
-        android:textSize="19sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.849"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
