--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fd8201"
-    tools:context=".PasswordActivity">
+    tools:context=".AdminHome">
 
 
     <ImageView
@@ -18,6 +18,7 @@
         app:srcCompat="@drawable/logosplash" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="100dp"
         android:layout_height="2dp"
         android:layout_margin="10dp"
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:shadowColor="#FFFFFF"
-        android:text="RESET PASSWORD"
+        android:text="Welcome Administrator"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,33 +42,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/user_email"
-        android:layout_width="330dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="296dp"
-        android:background="@drawable/input_edit"
-        android:ems="10"
-        android:hint="Enter Email"
-        android:inputType="textPersonName"
-        android:padding="10dp"
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="272dp"
+        android:layout_height="52dp"
+        android:text="Add Food"
+        android:onClick="add_food"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.24" />
 
     <Button
-        android:id="@+id/btn_reset"
-        android:layout_width="330dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="384dp"
-        android:background="@drawable/rounded_border"
-        android:onClick="login"
-        android:text="RESET"
+        android:id="@+id/button5"
+        android:layout_width="272dp"
+        android:layout_height="52dp"
+        android:onClick="view_food"
+        android:text="View Food"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.524" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
