--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fd8201"
-    tools:context=".PasswordActivity">
+    tools:context=".BookingActivity">
 
 
     <ImageView
-        android:layout_width="198dp"
-        android:layout_height="200dp"
+        android:layout_width="149dp"
+        android:layout_height="104dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,14 +26,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="160dp"
         android:shadowColor="#FFFFFF"
-        android:text="RESET PASSWORD"
+        android:text="Booking Information"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,33 +40,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <EditText
-        android:id="@+id/user_email"
+        android:id="@+id/address"
+        android:layout_width="330dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="216dp"
+        android:background="@drawable/input_edit"
+        android:ems="10"
+        android:hint="Enter Physical Address"
+        android:inputType="text"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/phone"
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="296dp"
         android:background="@drawable/input_edit"
         android:ems="10"
-        android:hint="Enter Email"
-        android:inputType="textPersonName"
+        android:hint="Enter Phone Number"
+        android:inputType="phone"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/quantity"
+        android:layout_width="330dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="372dp"
+        android:background="@drawable/input_edit"
+        android:ems="10"
+        android:hint="Order Quantity"
+        android:inputType="number"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_reset"
+        android:id="@+id/btn_book"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="384dp"
+        android:layout_marginTop="460dp"
         android:background="@drawable/rounded_border"
-        android:onClick="login"
-        android:text="RESET"
+        android:text="Book Now"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
