--- a/app/src/main/java/com/shariff/mealsordering/layout/activity_view_product_acivity.xml
+++ b/app/src/main/java/com/shariff/mealsordering/layout/activity_view_product_acivity.xml
@@ -82,6 +82,7 @@
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:text="12,000 TZS"
+                android:textStyle="bold"
                 android:textAlignment="center"
                 android:textSize="23sp" />
 
@@ -96,7 +97,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:layout_marginTop="428dp"
+        android:layout_marginTop="408dp"
         android:orientation="horizontal"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +111,27 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/star" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/star" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/star" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/star" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/star" />
+
 
     </LinearLayout>
 
@@ -118,7 +140,7 @@
         android:layout_width="300dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="48dp"
         android:backgroundTint="@color/food"
         android:onClick="BookingForm"
         android:text="ORDER NOW"
@@ -126,6 +148,8 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
